--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 02:04:00 AM</p>
+    <p class="lastupdate">09/07/2020 02:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">77.7&#176;F</td>
+        <td class="data">77.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">77.7&#176;F</td>
+        <td class="data">77.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">77.7&#176;F</td>
+        <td class="data">77.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">50.7&#176;F</td>
+        <td class="data">50.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.821 inHg (-0.017)</td>
+        <td class="data">29.820 inHg (-0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             83.6</span><br/>
-          <span title="02:03:09 AM">
-            77.6</span>
+          <span title="02:08:05 AM">
+            77.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:03:09 AM" class="loval">
-            77.6</span>
+          <span title="02:08:05 AM" class="loval">
+            77.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -269,8 +269,8 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="01:34:23 AM">
-            39</span><br/>
+          <span title="02:04:17 AM">
+            40</span><br/>
           <span title="12:00:01 AM">
             32</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 11 hours, 17 minutes</td>
+      <td class="data">5 days, 11 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 11 hours, 17 minutes</td>
+      <td class="data">5 days, 11 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
