--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/07/2020 03:19:00 AM</p>
+    <p class="lastupdate">09/07/2020 03:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">75.9&#176;F</td>
+        <td class="data">75.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">83.9&#176;F</td>
+        <td class="data">83.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             83.6</span><br/>
-          <span title="03:18:09 AM">
-            75.9</span>
+          <span title="03:20:00 AM">
+            75.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="03:18:09 AM" class="loval">
-            75.9</span>
+          <span title="03:20:00 AM" class="loval">
+            75.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:04:11 AM (Sunday)" class="loval">
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             87.0</span><br/>
-          <span title="03:16:01 AM">
-            83.9</span>
+          <span title="03:23:01 AM">
+            83.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:21:03 PM (Sunday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 12 hours, 32 minutes</td>
+      <td class="data">5 days, 12 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 12 hours, 32 minutes</td>
+      <td class="data">5 days, 12 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
